--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link ref="stylesheet" href="/style.css">
+    <link ref="stylesheet" href="style.css">
     <title>Party Invite</title>
     <body>
         <h1>Hello</h1>
