--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <link ref="stylesheet" href="style.css">
     <title>Party Invite</title>
     <body>
-        <h1>Hello</h1>
+        <div>
+            <h1>Hello</h1>
+        </div>
     </body>
 </html>
