--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link ref="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://legoman8304.github.io/style.css">
     <title>Party Invite</title>
     <body>
         <div>
