--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" type="text/css" href="https://github.com/clawdev/party-invitation/blob/main/style.css">
-    <title>Party Invite</title>
+    <head>
+        <link rel="stylesheet" type="text/css" href="https://github.com/clawdev/party-invitation/blob/main/style.css">
+        <title>Party Invite</title>
+    </head>
     <body>
         <div>
             <h1>Hello</h1>
