--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="https://github.com/clawdev/party-invitation/blob/main/style.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
         <title>Party Invite</title>
     </head>
     <body>
