--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </head>
     <body>
         <div>
-            <h1>Hello</h1>
+            <h1>Hello!</h1>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHk5uvX61ZjgHFPNT-YNOZbRA0UV0tvsCzA0EHkvD0dS1wXg/viewform?embedded=true" width="600" height="1080" frameborder="0" marginheight="0" marginwidth="0">Se încarcă…</iframe>
         </div>
     </body>
